# justanexperiment

./: .env.example  .gitignore  README.md  components.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/: auth-guard.tsx  layout.tsx  providers.tsx
app/[domain]/: layout.tsx  page.tsx
app/[domain]/[slug]/: page.tsx
app/api-py/: pyproject.toml
app/api/chat/: route.ts
app/api/completion/: route.ts
app/api/function-calling/: route.ts
app/api/functions/: route.ts
app/api/generate/: route.ts
app/app/(dashboard)/: layout.tsx  page.tsx
app/home/: layout.tsx  page.tsx
app/home/(auth)/: layout.tsx
app/home/2/: page.tsx  (+3 more)
components/: blog-card.tsx  header.tsx  nav.tsx  site-card.tsx
components/app/: mdx.tsx  nav.tsx  post-card.tsx  profile.tsx  report-abuse.tsx  site-card.tsx  user-settings-model.tsx  user-settings.tsx
components/convo/: client.tsx  controls.tsx
components/experiments/: d3-graph.tsx
components/form/: index.tsx  use-domain-status.ts
components/graph/: d3-graph.tsx
components/home/: enter-phone-number.tsx
components/icons/: github.tsx  google.tsx
components/old-but-probably-useful/: editor.tsx  mdx.tsx  overview-sites-cta.tsx  post-card.tsx  site-card.tsx
components/providers/: model-storage.tsx
components/ui/: dialog.tsx  navigation-menu.tsx  resizable.tsx
lib/: actions.ts  auth.ts  constants.ts  experiments.ts  models-storage.ts  types.ts  utils.ts
lib/hooks/: use-window-size.ts
playground/: swarms_example.ipynb
public/: manifest.json
styles/: globals.css
(+52 files in other folders)
